fix(flexblock): fix the align property of block when content is not full

--- a/src/modules/Home/components/Articles/ArticleItem/ArticleItem.module.scss
+++ b/src/modules/Home/components/Articles/ArticleItem/ArticleItem.module.scss
@@ -2,15 +2,14 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  max-width: 568px;
   max-height: 528px;
 
   > .images {
     width: 100%;
 
     @media screen and (min-width: 975px) {
-      height: 528px;
-      min-width: 568px;
+      // height: 528px;
+      // min-width: 568px;
       transition: transform ease 3s;
 
       &:hover {
@@ -31,8 +30,8 @@
     width: 100%;
 
     @media screen and (min-width: 975px) {
-      height: 363px;
-      min-width: 391px;
+      // height: 363px;
+      // min-width: 391px;
       transition: transform ease 3s;
 
       &:hover {
